use asset pipeline.

--- a/app/assets/stylesheets/components/_calculator.scss
+++ b/app/assets/stylesheets/components/_calculator.scss
@@ -84,7 +84,7 @@
 }
 
 video {
-  background: url('tree.png') no-repeat;
+  background: asset-url('trees.png') no-repeat;
   background-size: cover;
   height: auto;
   left: 50%;
