--- a/app/assets/stylesheets/components/_calculator.scss
+++ b/app/assets/stylesheets/components/_calculator.scss
@@ -37,7 +37,7 @@
   border-width: thin;
   font-size: 44px;
   height: 100px;
-  // margin-bottom: -20px;
+  // git test;
   padding-right: 10px;
   position: relative;
   width: 430px;
